<resources>
    <string name="app_name">InstagramCloneHomeWork</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="explore">Explore</string>
    <string name="profile">Profile</string>
    <string name="email">Email</string>
    <string name="hello">Hello</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="are_you_not_registered">Are you not registered?</string>
    <string name="sign_up">Sign Up!</string>
    <string name="welcome">Welcome</string>
    <string name="name">Name</string>
    <string name="sign_up_bttn">Sign Up</string>
    <string name="hilal_kurnaz">Hilal Kurnaz</string>
    <string name="hilalk_gmail_com">hilalk@gmail.com</string>
</resources>