<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/space_8"
            android:gravity="center_horizontal"
            android:text="@string/name"
            android:textColor="@color/purple_700"
            android:textSize="@dimen/size_16"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textViewName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/space_8"
            android:gravity="center_horizontal"
            android:text="@string/hilal_kurnaz"
            android:textColor="@color/black"
            android:textSize="@dimen/size_16" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/space_8"
            android:gravity="center_horizontal"
            android:text="@string/email"
            android:textColor="@color/purple_700"
            android:textSize="@dimen/size_16"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textViewEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/space_8"
            android:gravity="center_horizontal"
            android:text="@string/hilalk_gmail_com"
            android:textColor="@color/black"
            android:textSize="@dimen/size_16" />

    </LinearLayout>

</FrameLayout>